# AC-Sharescreen

./: .gitignore  6-27prompt.md  CHANGELOG.md  HANDOFF.md  SCREENLINK_IMPLEMENTATION_PROMPT.md  VideoHelperManager_clean.ts  apply_changes.ps1  build-desktop.bat  build-distributable.bat  build-screenlink-installer.bat  build_output.txt  bump-version.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  post-prompt-audit-2.md  post-prompt-audit.md  prompt.md  reset-screenlink-dev.ps1  run-desktop.bat  screenlink-postprocessing-fix.py  stability-30m-results.txt  test-built-app.bat  test-requestid.mjs  tsconfig.base.json
.commandcode/taste/: taste.md
.github/workflows/: release.yml
apps/desktop/: THIRD_PARTY_NOTICES.txt  audit-renderer.mjs  audit.html  components.json  electron-builder.config.cjs  index.html  package.json  test_output.txt  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
apps/desktop/docs/: UI_GUARDRAILS.md
apps/desktop/scripts/: dev-electron.mjs  electron-helper-probe.mjs  generate-tray-icons.mjs  launch-three-dev.ps1  transport-stability.mjs
apps/desktop/src/main/: AudioHelperManager.ts  BinaryPcmParser.ts  ControlClient.ts  PcmBridge.ts  SharedMemoryFrameRing.ts  VideoHelperManager.ts  app-lifecycle.ts  audio-capability-service.ts  audio-protocol.ts  capture-source-manager.ts  display-media-handler.ts  group-shortcut-manager.ts  group-store.ts  helper-path.ts  helper-path.ts.before-vfx-path-fix  host-session-manager.ts  ipc-handlers.ts  log-manager.ts  login-item-manager.ts  main.ts  nvidia-capability-service.ts  permissions.ts  protocol.ts  quality-preset-store.ts  (+12 more)
apps/desktop/tests/: active-stream-late-join.test.ts  active-stream-registry-phase3.test.ts  app-runtime-lifecycle.test.tsx  audio-capabilities-service.test.ts  audio-mode-plumbing.test.ts  audio-ownership-regression.test.ts  audio-phase-2g.test.ts  audio-productionization.test.ts  audio-regression.test.ts  audio-startup-order.test.ts  audio-worklet-static.test.ts  benchmark-frame-events.test.ts  binary-pcm-golden.test.ts  binary-pcm-parser.test.ts  bitrate-formatting.test.ts  bounded-window-stats.test.ts  check-version-consistency.test.mjs  compare-session-manager.test.ts  compare-variant-reconciler.test.ts  compare-variant-track-pipeline.test.ts  control-channel-characterization.test.ts  control-client.test.ts  control-connection-lifecycle.test.ts  custom-preset-override.test.ts  diagnostics-panel-content-only.test.tsx  durable-membership-sync.test.ts  fallback-chain-controller.test.ts  fixes-review.test.ts  group-control-identity.test.ts  group-control-lifecycle-queue.test.ts  group-control-mesh-lifecycle.test.ts  group-control-regression.test.ts  group-control-signed-runtime.test.ts  group-control-transport-results.test.ts  group-dashboard-empty-state.test.tsx  group-defaults-codec-content-hint.test.ts  group-dialogs-actions.test.ts  group-invite-flow.test.ts  group-message-router.test.ts  group-navigation-overview-refresh.test.ts  (+97 more)
docs/: PHASE_2G_AUDIO_MODE_COMPLETION.md  ScreenLink_Stage_3_7_UI_Design_Document.md  UPDATES.md  architecture.md  audio-implementation-baseline.md  audio-phase-2a-capabilities.md  audio-phase-2b-supported-machine-tests.md  audio-phase-2c-transport.md  audio-phase-2d-webrtc.md  current-feature-audit.md  dependency-baseline.md  evidence-register.md  known-limitations.md  licensing.md  privacy.md  security.md  stage-3-7-acceptance.md  troubleshooting.md  vdo-sdk-integration.md  watermelon-adoption-matrix.md  windows-testing.md
docs/superpowers/plans/: 2026-06-20-screenlink.md  2026-06-21-audio-sharing-plan.md  2026-06-21-desktop-p2p-migration.md  2026-06-21-feature-reconstruction.md  2026-06-21-phase-2b-correction.md  2026-06-23-system-audio-startup-stabilization.md  2026-06-24-phase3-1-3-6.md  2026-06-27-host-viewer-information.md  2026-06-29-easy-compare.md  2026-06-30-viewer-lifecycle-ownership-fix.md
docs/superpowers/specs/: 2026-06-21-audio-sharing-design.md  2026-06-21-desktop-p2p-migration.md  2026-06-27-host-viewer-information-design.md
native/audio-helper/: CMakeLists.txt
native/audio-helper/cmake/: GenerateBuildInfo.cmake
native/audio-helper/src/: ApplicationCaptureSource.cpp  ApplicationCaptureSource.h  AudioCapabilities.cpp  AudioCapabilities.h  AudioPacketAnalysis.h  AudioSessionMonitor.cpp  AudioSessionMonitor.h  BuildInfo.h.in  EndpointLoopbackSource.cpp  EndpointLoopbackSource.h  ExclusionPolicy.cpp  ExclusionPolicy.h  FilteredMonitorController.cpp  FilteredMonitorController.h  FilteredMonitorTypes.h  FilteredSourcePlanner.cpp  FilteredSourcePlanner.h  LoopbackCapture.cpp  LoopbackCapture.h  MultiSourceMixer.cpp  MultiSourceMixer.h  Phase2GSelfTest.cpp  Phase2GSelfTest.h  PipeTransport.cpp  PipeTransport.h  ProcessLoopbackActivator.cpp  ProcessLoopbackActivator.h  ProcessResolver.cpp  ProcessResolver.h  Protocol.h  ServiceSession.cpp  ServiceSession.h  SourceMapper.cpp  SourceMapper.h  SyntheticSource.cpp  SyntheticSource.h  WavWriter.cpp  WavWriter.h  WindowEnumerator.cpp  WindowEnumerator.h  (+3 more)
native/video-enhancer/: CMakeLists.txt
native/video-enhancer/cmake/: GenerateBuildInfo.cmake
native/video-enhancer/src/: BuildInfo.h.in  CapabilityProbe.cpp  CapabilityProbe.h  Diagnostics.cpp  Diagnostics.h  FrameTransport.cpp  FrameTransport.h  NativePresenter.cpp  NativePresenter.h  NvidiaVfxContext.cpp  NvidiaVfxContext.h  NvidiaVsrContext.cpp  NvidiaVsrContext.h  Protocol.cpp  Protocol.h  SharedFrameRing.cpp  SharedFrameRing.h  SimpleJson.cpp  SimpleJson.h  main.cpp
native/video-frame-ring/: CMakeLists.txt  package.json
native/video-frame-ring/cmake/: GenerateBuildInfo.cmake
native/video-frame-ring/src/: BuildInfo.h.in  FrameRing.cpp  FrameRing.h  SlotLayout.h  addon.cpp
scripts/: after-pack.cjs  capture-nvidia-vsr-live.ps1  check-version-consistency.mjs  copy-vdo-sdk.mjs  dev-launcher.ps1  dev-lock-utils.bat  generate-release-summary.ps1  package-release.mjs  package.json  repair-release-upload.ps1  reset-screenlink-dev.ps1  set-release-version.mjs  verify-vdo-sdk.mjs
(+188 files in other folders)
